# documind-rag-chatbot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.streamlit/: config.toml
LEARN/: 01-big-picture.md  02-ingestion-chunking.md  03-embeddings-vectors.md  04-retrieval-lcel.md  05-streaming-ui.md  06-production-next.md  README.md
src/: config.py  document_loader.py  rag_chain.py  vector_store.py
